--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  height:100%;
+  width:100%;
+}
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
